# eval-harness

./: README.md  pyproject.toml
src/eval_harness/: __init__.py  dataset.py  evaluators.py  runner.py
tests/: test_dataset.py  test_evaluators.py  test_runner.py
